# php-rpc

./: .config.json  .gitignore  CMakeLists.txt  README.md
example/: RPCClient.php  RPCServer.php
src/: RPCClient.cpp  RPCClient.h  RPCServer.cpp  RPCServer.h  main.cpp
